Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.6
-
None
-
Windows 11
-
-
729e23f15 (dev), d19d32a91 (6.7), dd1bddaf3 (6.6), 7dd7e85ac (tqtc/lts-6.5)
Description
Steps to reproduce:
- run the attached "textedit_placeholder" project
- enter any symbol to text field
Expected result: Placeholder is fully hidden.
Current result: See the attached "textedit_placeholder.png" screenshot.
Attachments
Issue Links
- resulted from
-
QTBUG-115831 REG 5->6: Setting property placeHolderText on QPlainTextEdit does not have any effect if the QPlainTextEdit does not have focus
-
- Closed
-
For Gerrit Dashboard: QTBUG-119808 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
527181,6 | QPlainTextEdit: update viewport, when placeholder text disappears | dev | qt/qtbase | Status: MERGED | +2 | 0 |
527290,2 | QPlainTextEdit: update viewport, when placeholder text disappears | 6.7 | qt/qtbase | Status: MERGED | +2 | 0 |
527346,2 | QPlainTextEdit: update viewport, when placeholder text disappears | 6.6 | qt/qtbase | Status: MERGED | +2 | 0 |
527835,4 | QPlainTextEdit: update viewport, when placeholder text disappears | tqtc/lts-6.5 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |