src/widgets/widgets/qplaintextedit.cpp
@@ -725,8 +725,14 @@ void QPlainTextEditPrivate::updateViewport()
 }
 
 QPlainTextEditPrivate::QPlainTextEditPrivate()
-    : tabChangesFocus(false), showCursorOnInitialShow(false), backgroundVisible(false),
-      centerOnScroll(false), inDrag(false), clickCausedFocus(false), pageUpDownLastCursorYIsValid(false)
+    : tabChangesFocus(false)
+    , showCursorOnInitialShow(false)
+    , backgroundVisible(false)
+    , centerOnScroll(false)
+    , inDrag(false)
+    , clickCausedFocus(false)
+    , pageUpDownLastCursorYIsValid(false)
+    , placeholderTextShown(false)
 {
 }
 
@@ -793,14 +799,14 @@ void QPlainTextEditPrivate::init(const QString &txt)
 
 void QPlainTextEditPrivate::updatePlaceholderVisibility()
 {
-    Q_Q(QPlainTextEdit);
-
     // We normally only repaint the part of view that contains text in the
     // document that has changed (in repaintContents). But the placeholder
     // text is not a part of the document, but is drawn on separately. So whenever
     // we either show or hide the placeholder text, we issue a full update.
-    if (q->document()->isEmpty())
+    if (placeholderTextShown != placeHolderTextToBeShown()) {
         viewport->update();
+        placeholderTextShown = placeHolderTextToBeShown();
+    }
 }
 
 void QPlainTextEditPrivate::repaintContents(const QRectF &contentsRect)
@@ -1902,7 +1908,7 @@ void QPlainTextEdit::paintEvent(QPaintEvent *e)
     er.setRight(qMin(er.right(), maxX));
     painter.setClipRect(er);
 
-    if (d->isPlaceHolderTextVisible()) {
+    if (d->placeHolderTextToBeShown()) {
         const QColor col = d->control->palette().placeholderText().color();
         painter.setPen(col);
         painter.setClipRect(e->rect());
